[project]
name = "doc2md-rag"
version = "1.0.0"
description = "Convert documents to LLM-friendly markdown with hybrid RAG search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pymupdf4llm>=0.0.10",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pandas>=2.0",
    "tabulate>=0.9",
    "streamlit>=1.30,<2.0",
    "langchain-text-splitters>=0.2",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.2",
    "anthropic>=0.40",
    "markdown>=3.5",
    "plotly>=5.18",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
voyage = ["voyageai>=0.3.0"]
google = ["google-generativeai>=0.8.0"]
all-embeddings = ["openai>=1.0", "voyageai>=0.3.0", "google-generativeai>=0.8.0"]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
